# extreme_event_prediction

./: .gitignore  README.md  pyproject.toml  report.ipynb  senior_ml_assignment_ai2c.ipynb  solution.ipynb
checkpoints/: best_model-v1.ckpt  best_model-v10.ckpt  best_model-v11.ckpt  best_model-v12.ckpt  best_model-v2.ckpt  best_model-v3.ckpt  best_model-v4.ckpt  best_model-v5.ckpt  best_model-v6.ckpt  best_model-v7.ckpt  best_model-v8.ckpt  best_model-v9.ckpt  best_model.ckpt  last-v1.ckpt  last.ckpt
data/models/: best_random_forest.pkl  best_tcnn.pth
lightning_logs/version_0/: events.out.tfevents.1730916042.user-lobos-MBP  metrics.csv
lightning_logs/version_1/: events.out.tfevents.1730916064.user-lobos-MBP  metrics.csv
lightning_logs/version_10/: metrics.csv
lightning_logs/version_11/: metrics.csv
lightning_logs/version_12/: metrics.csv
lightning_logs/version_2/: events.out.tfevents.1730916357.user-lobos-MBP  metrics.csv
lightning_logs/version_3/: events.out.tfevents.1730916373.user-lobos-MBP  metrics.csv
lightning_logs/version_4/: events.out.tfevents.1730916758.user-lobos-MBP  metrics.csv
lightning_logs/version_5/: events.out.tfevents.1730916995.user-lobos-MBP  metrics.csv
lightning_logs/version_6/: events.out.tfevents.1730917047.user-lobos-MBP  metrics.csv
lightning_logs/version_7/: metrics.csv
lightning_logs/version_8/: metrics.csv
lightning_logs/version_9/: metrics.csv
models/: best_lstm_model.pth  best_random_forest.pkl
src/: data_preprocessing.py  improvement.py  improvement_all_together.py  improvement_dnn.py  improvement_lstm.py  model_evaluation.py  random_forest.py  report.ipynb  temp.ipynb  temporal_cnn.py
(+18 files in other folders)
